[package]
name = "cbm8032_to_vulkan"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[lib]
name = "cbm8032_to_vulkan"
path = "src/lib/lib.rs"

[[bin]]
name = "cbm8032_to_vulkan"
path = "src/bin/main.rs"

[dependencies]
nannou = "0.10"
serde = "1"
serde_json = "1"
serialport = "3"
vulkano = "0.13"

[patch.crates-io]
shaderc = { git = "https://github.com/mitchmindtree/shaderc-rs", branch = "lib_detect_patch_0.5.1" }
shaderc-sys = { git = "https://github.com/mitchmindtree/shaderc-rs", branch = "lib_detect_patch_0.5.1" }
