[package]
name = "cbm8032_to_vulkan"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
edition = "2018"

[lib]
name = "cbm8032_to_vulkan"
path = "src/lib/lib.rs"

[[bin]]
name = "cbm8032_to_vulkan"
path = "src/bin/main.rs"

[dependencies]
nannou = { git = "https://github.com/mitchmindtree/nannou", branch = "cbm8032-backup" }
serde = "1"
serde_json = "1"
serialport = "3"
vulkano = "0.13"
